--- a/_includes/nav_footer_custom.html
+++ b/_includes/nav_footer_custom.html
@@ -1,1 +1,1 @@
-<p class="text-small text-grey-dk-100 mb-0">Copyright (c) Nextum Authors and Contributors. All rights reserved.</p>
+<p class="text-small text-grey-dk-100 mb-0">© 2023 Nextum authors and contributors. <br> All rights reserved.</p>
