--- a/_includes/footer_custom.html
+++ b/_includes/footer_custom.html
@@ -1,1 +1,1 @@
-<p class="text-small text-grey-dk-100 mb-0"><a href="https://github.com/nextum/nextum.github.io/issues/new">Report Issue</a> · <a href="https://github.com/nextum/nextum.github.io/blob/main/CONTRIBUTING.md">Contribute</a> · <a href="https://github.com/nextum/nextum.github.io/discussions">Discussions</a></p>
+<p class="text-small text-grey-dk-100 mb-0">© 2023 Nextum authors and contributors. All rights reserved. <a href="https://github.com/nextum/nextum.github.io/issues/new">Report Issue</p>
