small change in index and footer and delete about

--- a/_includes/footer_custom.html
+++ b/_includes/footer_custom.html
@@ -1,3 +1,1 @@
-<p class="text-small text-grey-dk-100 mb-0">© 2023 Nextum authors and contributors. All rights reserved.</p>
-<p class="text-small text-grey-dk-100 mb-0">All rights reserved.</p>
-<p class="text-small text-grey-dk-100 mb-0"><a href="https://github.com/nextum/nextum.github.io/issues/new">Report Issue</p>
+<p class="text-small text-grey-dk-100 mb-0">© 2023 Nextum authors and contributors. All rights reserved. <br> <a href="https://github.com/nextum/nextum.github.io/issues/new">Report Issue</a></p>
